:sparkles: Feat (Produto,Caixa, Categoria): Fazendo a ligação entre produto-categoria, produto-caixa.

--- a/crud-jppa/src/main/resources/application.properties
+++ b/crud-jppa/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=crud-jppa
 
-# Configuração do H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Configuração do banco PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/crud_jpa
+spring.datasource.username=postgres
+spring.datasource.password=2149
+
+#Configurações do Hibernate (JPA)
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
